--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="An application that allows you to scale protests without the need of a central authority tracking your wherabouts and censoring your content."
+      content="%REACT_APP_APPLICATION_DESCRIPTION%"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
